feat(sidebar): update layout to use 3 columns
besides, this commit will also manage to clamp the sidebar text to workaround long category names.
In order for that to happen is needed to HACK the width with a fixed number that will avoid further
complexity. Far from ideal but avoid more complexity that may not be worth it now.
https://www.loom.com/share/baf92bd0590d464eba0dd1d1173a7cc0

--- a/javascripts/discourse/templates/discovery.hbs
+++ b/javascripts/discourse/templates/discovery.hbs
@@ -8,13 +8,13 @@
   <div class="container">
     <div class="dc-row">
       {{#if themeSettings.show_sidebar}}
-        <div class="dc-col-lg-4">
+        <div class="dc-col-lg-3 dc-sidebar-hack-width">
           <div class="d-none d-lg-flex h-100">
             {{dc-sidebar}}
           </div>
         </div>
       {{/if}}
-      <div class="dc-col {{if themeSettings.show_sidebar "dc-col-lg-8"}}">
+      <div class="dc-col {{if themeSettings.show_sidebar "dc-col-lg-9"}}">
         <div class="list-controls">
           <div class="container">
             {{outlet "navigation-bar"}}
