--- a/scss/widgets/post.scss
+++ b/scss/widgets/post.scss
@@ -45,11 +45,10 @@
       }
     }
   }
-}
 
-.topic-map {
-  margin: 0;
-  margin-top: 0.25rem;
+  .topic-map {
+    margin-left: 0;
+  }
 }
 
 .topic-post.moderator {
@@ -170,7 +169,7 @@
 }
 
 .post-menu-row {
-  margin-top: $spacer * 2;
+  margin-top: $spacer * 3;
   border-top: 0.0625rem solid $gray-300;
 }
 
