--- a/javascripts/discourse/templates/components/dc-category-card.hbs
+++ b/javascripts/discourse/templates/components/dc-category-card.hbs
@@ -4,32 +4,32 @@
   style="border-top-color: #{{category.color}};"
 >
   <div class="dc-card__content">
-    <h2 class="dc-card__title dc-clamp-2">
+    <h2 class="dc-card__title dc-clamp-2 has-icon">
       {{#if category.read_restricted}}
         {{d-icon "lock"}}
       {{/if}}
       {{category.name}}
+      <div class="dc-card__meta">
+        <span class="material-icons">
+          forum
+        </span>
+        <p class="m-0 ml-1 dc-text-light">
+          {{category.totalTopicCount}}
+        </p>
+        {{#if category.tdc_is_collective}}
+          <span class="ml-2 material-icons">
+            supervisor_account
+          </span>
+          <p class="m-0 ml-1 dc-text-light">
+            {{groupCount}}
+          </p>
+        {{/if}}
+      </div>
     </h2>
     <div class="dc-card__text dc-clamp-2">
       {{#if category.description_excerpt}}
         {{{dir-span category.description_excerpt}}}
       {{/if}}
     </div>
-  </div>
-  <div class="dc-card__meta">
-    <span class="material-icons">
-      forum
-    </span>
-    <p class="m-0 ml-1 dc-text-light">
-      {{category.totalTopicCount}}
-    </p>
-    {{#if category.tdc_is_collective}}
-      <span class="ml-2 material-icons">
-        supervisor_account
-      </span>
-      <p class="m-0 ml-1 dc-text-light">
-        {{groupCount}}
-      </p>
-    {{/if}}
   </div>
 </a>
