--- a/javascripts/discourse/templates/components/dc-topic-card-content.hbs
+++ b/javascripts/discourse/templates/components/dc-topic-card-content.hbs
@@ -43,10 +43,12 @@
             </p>
           </div>
         </header>
-        {{#if topic.hasExcerpt}}
-          <div class="dc-card__text dc-clamp-1">
-            {{{dir-span topic.escapedExcerpt}}}
-          </div>
+        {{#if topic.pinned}}
+          {{#if topic.hasExcerpt}}
+            <div class="dc-card__text dc-clamp-2">
+              {{{dir-span topic.escapedExcerpt}}}
+            </div>
+          {{/if}}
         {{/if}}
       </div>
     </div>
