feat(card): topic content to use relative date

--- a/javascripts/discourse/templates/components/dc-topic-card-content.hbs
+++ b/javascripts/discourse/templates/components/dc-topic-card-content.hbs
@@ -39,7 +39,8 @@
               {{#if topic.pinned}}
                 ·
               {{/if}}
-              {{dc-format-date topic.createdAt}}
+              started
+              {{dc-relative-date topic.createdAt}}
             </p>
           </div>
         </header>
