refactor(breadcrumps): change color for icon private lock

--- a/scss/templates/components/d-navigation.scss
+++ b/scss/templates/components/d-navigation.scss
@@ -87,8 +87,9 @@ ol.category-breadcrumb {
     align-items: center;
     display: flex;
 
-    .badge-category {
-      color: $gray;
+    .badge-category,
+    .d-icon {
+      color: $black;
     }
 
     .badge-category-bg {
