--- a/javascripts/discourse/templates/components/topic-list.hbs
+++ b/javascripts/discourse/templates/components/topic-list.hbs
@@ -7,7 +7,7 @@
           {{dc-topic-list-item-small topic=topic}}
         </div>
       {{else}}
-        <div class="dc-col-sm-6 dc-col-lg-12">
+        <div class="dc-col-12">
           {{topic-list-item
             topic=topic
             bulkSelectEnabled=bulkSelectEnabled
