fix(header): shown all title when scroll down

--- a/scss/widgets/header.scss
+++ b/scss/widgets/header.scss
@@ -135,3 +135,11 @@
 .extra-info-wrapper + .panel .dc-custom-headers-links {
   visibility: hidden;
 }
+
+.d-header .extra-info-wrapper {
+  width: 100%;
+}
+
+.d-header .extra-info-wrapper + .panel {
+  width: auto;
+}
