--- a/scss/widgets/dc-collectives-alert.scss
+++ b/scss/widgets/dc-collectives-alert.scss
@@ -8,7 +8,7 @@
   font-size: 1rem;
   padding: 0.5rem 0.875rem;
   margin-bottom: 0.9375rem;
-  max-width: 100vw;
+  max-width: 100%;
   box-sizing: border-box;
 
   > span {
