fix(topic): update fix for image on detail

--- a/scss/templates/topic.scss
+++ b/scss/templates/topic.scss
@@ -52,6 +52,6 @@ nav.post-controls button.bookmark.bookmarked .d-icon,
   font-weight: $font-weight-bold;
 }
 
-.cooked img:not(.thumbnail) {
+.cooked .lightbox-wrapper img {
   width: 100%;
 }
