--- a/scss/templates/navigation/category.scss
+++ b/scss/templates/navigation/category.scss
@@ -1,3 +1,12 @@
+.dc-sidebar-visible .category-actions {
+  @include media-breakpoint-up(lg) {
+    // As sidebar will render on large screens
+    #create-topic {
+      display: none;
+    }
+  }
+}
+
 .category-heading {
   margin-bottom: 2rem;
   width: 100%;
