fix(post): avoid highlight inner widget bg

--- a/scss/widgets/post.scss
+++ b/scss/widgets/post.scss
@@ -53,7 +53,7 @@
 }
 
 .topic-post.moderator {
-  article {
+  > article {
     background-color: dark-light-choose($highlight-low, $highlight-medium);
   }
 
