fix(nav): improve mobile spaces

--- a/javascripts/discourse/templates/components/d-navigation.hbs
+++ b/javascripts/discourse/templates/components/d-navigation.hbs
@@ -10,7 +10,7 @@
   </p>
 {{/if}}
 {{#if category}}
-  <p class="category-description">
+  <p class="category-description mt-0 mt-lg-3">
     {{{category.description}}}
   </p>
 {{/if}}
