--- a/javascripts/discourse/templates/navigation/category.hbs
+++ b/javascripts/discourse/templates/navigation/category.hbs
@@ -26,7 +26,7 @@
   {{/if}}
   <div
     class="category-navigation
-      {{unless category.uploaded_background.url "mt-4"}}
+      {{unless category.uploaded_background.url "mt-lg-4"}}
 
       {{if themeSettings.show_sidebar "dc-sidebar-visible"}}"
   >
