--- a/scss/templates/components/d-navigation.scss
+++ b/scss/templates/components/d-navigation.scss
@@ -76,6 +76,7 @@ ol.category-breadcrumb {
     background: transparent;
     border: none;
     font-size: 2rem;
+    line-height: 1;
     padding: 0;
   }
 
