--- a/javascripts/discourse/templates/components/dc-sidebar.hbs
+++ b/javascripts/discourse/templates/components/dc-sidebar.hbs
@@ -1,9 +1,17 @@
 <div class="sidebar-actions mb-3 mt-4">
-  {{d-button
-    class="btn btn-block btn-primary"
-    translatedLabel="New topic"
-    action=(route-action "createTopic")
-  }}
+  {{#if currentUser}}
+    {{d-button
+      class="btn btn-block btn-primary"
+      translatedLabel="New topic"
+      action=(route-action "createTopic")
+    }}
+  {{else}}
+    {{d-button
+      class="btn btn-block btn-primary"
+      translatedLabel="New topic"
+      action=(route-action "showLogin")
+    }}
+  {{/if}}
 </div>
 <div class="m-0 d-flex flex-column">
   <a
