--- a/javascripts/discourse/templates/discovery.hbs
+++ b/javascripts/discourse/templates/discovery.hbs
@@ -10,7 +10,7 @@
       {{#if themeSettings.show_sidebar}}
         <div class="dc-col-lg-3 dc-sidebar-hack-width">
           <div class="d-none d-lg-flex h-100">
-            {{dc-sidebar}}
+            {{dc-sidebar currentUser=currentUser}}
           </div>
         </div>
       {{/if}}
