--- a/scss/templates/composer.scss
+++ b/scss/templates/composer.scss
@@ -1,5 +1,5 @@
 %composer-input-controls {
-  border-radius: 0.25rem;
+  border-radius: $border-radius;
   border: 0.0625rem solid $gray-300;
   margin-bottom: 0;
   padding: 0.5rem 0.75rem;
