--- a/scss/widgets/header.scss
+++ b/scss/widgets/header.scss
@@ -1,6 +1,6 @@
 .header-btn {
   align-items: center;
-  border-radius: 0.25rem;
+  border-radius: $border-radius;
   cursor: pointer;
   display: flex;
   justify-content: space-between;
