--- a/scss/widgets/dc-collectives-alert.scss
+++ b/scss/widgets/dc-collectives-alert.scss
@@ -1,7 +1,7 @@
 .alert.alert-collective-alert {
   align-items: center;
   background-color: $yellow-100;
-  border-radius: 0.25rem;
+  border-radius: $border-radius;
   border: 0.0625rem solid $yellow-200;
   display: flex;
   flex-direction: column;
@@ -26,7 +26,7 @@
 
   .dc-alert-btn {
     border: 0.0625rem solid $blue;
-    border-radius: 0.625rem;
+    border-radius: $border-radius;
     background-color: transparent;
     font-style: normal;
     font-weight: bold;
