fix(footer-topic-buttons): better layout for guest users

--- a/javascripts/discourse/templates/topic.hbs
+++ b/javascripts/discourse/templates/topic.hbs
@@ -186,7 +186,7 @@
                   replyToPost=(action "replyToPost")
                 }}
               {{else}}
-                <div id="topic-footer-buttons">
+                <div id="topic-footer-buttons" class="mb-4 clearfix">
                   {{d-button
                     icon="reply"
                     class="btn-primary pull-right"
