--- a/scss/templates/topic.scss
+++ b/scss/templates/topic.scss
@@ -51,6 +51,11 @@ nav.post-controls button.bookmark.bookmarked .d-icon,
   font-weight: $font-weight-bold;
 }
 
+#topic-footer-buttons {
+  max-width: 100%;
+}
+
+.topic-area > .loading-container,
 .cooked .lightbox-wrapper img {
   width: 100%;
 }
