fix(search): make button same height than input

--- a/common/common.scss
+++ b/common/common.scss
@@ -48,6 +48,7 @@
 
 @import "login";
 @import "invites";
+@import "search-advanced";
 
 // Re-apply foundation styles with different variables to overwrite rules
 // https://github.com/discourse/discourse/blob/master/app/assets/stylesheets/common/foundation/base.scss
