refactor(btn): make sure by default all buttons same border radius

--- a/scss/button.scss
+++ b/scss/button.scss
@@ -12,6 +12,10 @@
   border-radius: $border-radius;
 }
 
+.btn {
+  border-radius: $border-radius;
+}
+
 .btn-transparent {
   border-radius: 0;
   border: none;
