fix(timeline): restore to display on desktop accordingly

--- a/javascripts/discourse/templates/topic.hbs
+++ b/javascripts/discourse/templates/topic.hbs
@@ -200,6 +200,7 @@
         </section>
       </div>
       {{#topic-navigation
+        class="topic-navigation"
         topic=model
         jumpToDate=(action "jumpToDate")
         jumpToIndex=(action "jumpToIndex") as |info|
