feat(homepage): allow arbitrary homepage
this commit will also drop all categories in favor or all discussions mapping to the new homepage

--- a/javascripts/discourse/templates/components/dc-sidebar.hbs
+++ b/javascripts/discourse/templates/components/dc-sidebar.hbs
@@ -16,10 +16,10 @@
 <div class="m-0 d-flex flex-column">
   <a
     class="sidebar-raw-link {{unless activeCategoryId "active"}}"
-    href="/categories"
+    href="/latest"
     {{action "handleClickLink" null}}
   >
-    All categories
+    All discussions
   </a>
 </div>
 <ul class="list-unstyled scrollable-area">
