feat(latest): adjust layout to replicate category one

--- a/javascripts/discourse/templates/components/d-navigation.hbs
+++ b/javascripts/discourse/templates/components/d-navigation.hbs
@@ -5,7 +5,7 @@
   noSubcategories=noSubcategories
 }}
 {{#if isLatestPage}}
-  <p class="page-description">
+  <p class="page-description mt-0 mt-lg-3">
     In this section you will find everything that is happening right now within the community
   </p>
 {{/if}}
