chore(latest): update copy for latest page

--- a/javascripts/discourse/templates/components/d-navigation.hbs
+++ b/javascripts/discourse/templates/components/d-navigation.hbs
@@ -6,7 +6,7 @@
 }}
 {{#if isLatestPage}}
   <p class="page-description mt-0 mt-lg-3">
-    In this section you will find everything that is happening right now within the community
+    In this section you will find everything that is happening right now within the community. If you want to see an specific subject filter by a category that best describe what you are looking for
   </p>
 {{/if}}
 {{#if category}}
