feat(sidebar): add events link
besides, this commit will inject router current url to the sidebar to make easier the assertion over
current routes

--- a/javascripts/discourse/templates/components/dc-sidebar.hbs
+++ b/javascripts/discourse/templates/components/dc-sidebar.hbs
@@ -15,11 +15,18 @@
 </div>
 <div class="m-0 d-flex flex-column">
   <a
-    class="sidebar-raw-link {{unless activeCategoryId "active"}}"
+    class="sidebar-raw-link {{if isLatestPage "active"}}"
     href="/latest"
     {{action "handleClickLink" null}}
   >
     All discussions
+  </a>
+  <a
+    class="sidebar-raw-link {{if isEventsPage "active"}}"
+    href="/calendar"
+    {{action "handleClickLink" null}}
+  >
+    All events
   </a>
 </div>
 <ul class="list-unstyled scrollable-area">
