feat(sidebar): make events link customisable

--- a/javascripts/discourse/templates/components/dc-sidebar.hbs
+++ b/javascripts/discourse/templates/components/dc-sidebar.hbs
@@ -23,7 +23,7 @@
   </a>
   <a
     class="sidebar-raw-link {{if isEventsPage "active"}}"
-    href="/calendar"
+    href="{{themeSettings.events_url}}"
     {{action "handleClickLink" null}}
   >
     All events
