fix: add padding to account for the categories nav if it's enabled

--- a/scss/connectors/categories-nav.scss
+++ b/scss/connectors/categories-nav.scss
@@ -5,6 +5,10 @@ $dc-categories-height-base-sm: $dc-categories-height-base * 0.875;
 
 #main-outlet {
   padding-top: 1rem;
+
+  &.with-categories-nav {
+    padding-top: $dc-categories-height-base;
+  }
 }
 
 .d-header {
