dev: add all categories link to sidebar

--- a/javascripts/discourse/templates/components/dc-sidebar.hbs
+++ b/javascripts/discourse/templates/components/dc-sidebar.hbs
@@ -28,6 +28,13 @@
   >
     All events
   </a>
+  <a
+    class="sidebar-raw-link {{if isCategoriesPage "active"}}"
+    href="/categories"
+    {{action "handleClickLink" null}}
+  >
+    All categories
+  </a>
 </div>
 <ul class="list-unstyled scrollable-area">
   {{#each categories as |category|}}
