revert(categories): remove code related to current efforts

--- a/javascripts/discourse/templates/components/categories-only.hbs
+++ b/javascripts/discourse/templates/components/categories-only.hbs
@@ -1,5 +1,2 @@
 {{! https://github.com/discourse/discourse/blob/master/app/assets/javascripts/discourse/templates/components/categories-only.hbs }}
-{{dc-categories-only
-  topicCategories=topicCategories
-  currentEfforts=currentEfforts
-}}
+{{dc-categories-only topicCategories=topicCategories}}
