feat(header): add dc-header-component instead built-in

--- a/scss/widgets/header.scss
+++ b/scss/widgets/header.scss
@@ -12,6 +12,8 @@
   background: $beige;
   height: $header-height;
   margin-bottom: 0;
+  // Allow to swap by dc-header-component instead
+  visibility: hidden !important;
 
   .wrap {
     max-width: none;
