fix(header): include latest / on homepage url

--- a/javascripts/discourse/connectors/above-site-header/dc-header.hbs
+++ b/javascripts/discourse/connectors/above-site-header/dc-header.hbs
@@ -1,6 +1,6 @@
 <dc-header
   community="/"
-  homepage="https://debtcollective.org"
+  homepage="https://debtcollective.org/"
   returnurl="{{theme-setting "header_imported_returnurl"}}"
   id="dc-header"
 ></dc-header>
