--- a/scss/widgets/header.scss
+++ b/scss/widgets/header.scss
@@ -10,8 +10,9 @@
 
 .d-header-wrap {
   // variable created with theme settings
+  display: none !important;
   @if $header-discourse-visible {
-    display: none !important;
+    display: block !important;
   }
 }
 
