refactor(header): use single setting variable for header imported

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -11,10 +11,10 @@ body {
 
 #main {
   // variable created with theme settings
-  padding-top: 5rem;
+  padding-top: 0rem;
 
-  @if $header-discourse-visible {
-    padding-top: 0rem;
+  @if $header-imported {
+    padding-top: 5rem;
   }
 }
 
