--- a/javascripts/discourse/templates/modal/login.hbs
+++ b/javascripts/discourse/templates/modal/login.hbs
@@ -18,13 +18,11 @@
     <div>
       <p>
         Need an account?
-        <a href="https://debtcollective.org/debt-union" id="new-account-link">
-          Join the union for access!
+        <br />
+        <a href="https://community.debtcollective.org/session/sso_cookies/signup?return_url=https://community.debtcollective.org" id="new-account-link">
+          Sign up here!
         </a>
         <br />
-        <small>
-          Union membership grants you access to the Community Forums, Dispute Tools and much more!
-        </small>
       </p>
     </div>
     {{#if canLoginLocal}}
