--- a/javascripts/discourse/templates/modal/login.hbs
+++ b/javascripts/discourse/templates/modal/login.hbs
@@ -18,7 +18,7 @@
     <div>
       <p>
         Need an account?
-        <a href="https://community.debtcollective.org/session/sso_cookies/signup?return_url=https://community.debtcollective.org" id="new-account-link">
+        <a target="_blank" href="https://community.debtcollective.org/session/sso_cookies/signup?return_url=https://community.debtcollective.org" id="new-account-link">
           Sign up for access here!
         </a>
       </p>
