--- a/javascripts/discourse/templates/modal/login.hbs
+++ b/javascripts/discourse/templates/modal/login.hbs
@@ -18,11 +18,9 @@
     <div>
       <p>
         Need an account?
-        <br />
-        <a href="https://community.debtcollective.org/session/sso_cookies/signup?return_url=https://community.debtcollective.org" id="new-account-link">
-          Sign up here!
+        <a target="_blank" href="https://community.debtcollective.org/session/sso_cookies/signup?return_url=https://community.debtcollective.org" id="new-account-link">
+          Sign up for access here!
         </a>
-        <br />
       </p>
     </div>
     {{#if canLoginLocal}}
